<resources>
    <string name="app_name">#Alliance Camera</string>
    <string name="cameraAufloesung">Select Resolution</string>
    
    
    <string name="whiteBalance">white balance</string>
    <string name="auto">auto</string>
    <string name="incandescent">incandescent</string>
    <string name="fluorescent">fluorescent</string>
    <string name="daylight">daylight</string>
    <string name="cloudydaylight">cloudy daylight</string>
    <string name="resolution">Resolution</string>
    <string name="options">Options</string>
    <string name="btSave">Save</string>
    <string name="btAbort">Abort</string>
    <string name="autoFocusSensibility">Autofocus-Sensibility</string>
    <string name="btDefault">Default</string>
    
    <string name="exception_LoadCameraPreview">Error when initialize the camera-preview. Please restart the smartphone!</string>
    <string name="exception_takePicture">Error when shooting the photo</string>
    <string name="exception_orientationChange">Error when change the orientation!</string>
    <string name="exception_cameraNotAvailable">Camera not available</string>
    <string name="exception_flashlight">Error when using flashlight!</string>
    <string name="exception_zoom">Fehler when using zoom-function!</string>
    <string name="exception_cameraCouldNotStart">Camera could not started!</string>
</resources>
