<?xml version="1.0" encoding="utf-8"?>

     
		<TableLayout 
		     xmlns:android="http://schemas.android.com/apk/res/android"
		     android:id="@+id/umrandungAussen"
		     android:layout_width="fill_parent" 
			 android:layout_height="fill_parent">
			
			<TableRow>
			    
			     <LinearLayout 
			         android:id="@+id/radarAbstandLinksZumRand"
			         android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="10sp"
				    android:layout_marginBottom="10sp"
				    android:orientation="horizontal">
						    
			         <ImageView
		              android:id="@+id/backImage"
		               android:src="@drawable/bt_back"
						android:layout_width="50sp"
						android:layout_height="wrap_content"/>
						    
				    <TextView
				        android:id="@+id/title"
				        android:layout_weight="1"
				        android:textSize="20sp"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center_vertical|left"
				        android:text="@string/options"
				        android:textColor="@color/holo_blue_dark"
				        android:layout_marginRight="30sp"/>
				    
			    </LinearLayout>
			    
			</TableRow>
		    
			 <TableRow>
			     
					<View
					    android:id="@+id/trennstrich"
			        	style="@style/MyActionBar_Trennstrich"/>  
			</TableRow>
			
			 <TableRow>
			     
			        <TextView
			            android:id="@+id/tvAutoFocusSensibility"
				        android:layout_weight="1"
				        android:textSize="20sp"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center_vertical|left"
				        android:text="@string/autoFocusSensibility"
				        android:textColor="@color/holo_blue_dark"
				        android:layout_marginRight="30sp"
				        android:layout_marginTop="15sp"
				        android:layout_marginLeft="5sp"/>
			     
			 </TableRow>
		    <TableRow>

		        <SeekBar
			        android:id="@+id/seekBarAutofocusSensibility"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_centerVertical="true"
			        android:layout_margin="10dp"
			        android:progressDrawable="@drawable/styled_progress"
			        android:paddingLeft="15dp"
			        android:paddingRight="15dp"
			        android:thumb="@drawable/seekbar_thumbler"
			         android:indeterminate="false"
			         android:maxHeight="2sp"
			         android:minWidth="300sp"/>
		    
   		    </TableRow>
			
		   
		     <TableRow>
		           <LinearLayout
			    	        android:id="@+id/layoutButtons"
						    android:orientation="horizontal"
						    android:layout_width="match_parent"
						    android:layout_height="wrap_content">
					   
         				<Button
						    android:id="@+id/btSeekbarDefault"
						    android:text="@string/btDefault"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"/>
					
				</LinearLayout>
		        
		    </TableRow>
		    
			 
		    <TableRow>
		           <LinearLayout
			    	        android:id="@+id/layoutButtons"
						    android:orientation="horizontal"
						    android:layout_width="match_parent"
						    android:layout_height="wrap_content">
					   
         				<Button
						    android:id="@+id/btSave"
						    android:text="@string/btSave"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"/>
					
					
						<Button
						    android:id="@+id/btAbort"
						    android:text="@string/btAbort"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"/>
				</LinearLayout>
		        
		    </TableRow>
		</TableLayout>
